--- a/frontend/common/index.html
+++ b/frontend/common/index.html
@@ -4,7 +4,10 @@
 <head>
   <meta charset="utf-8" />
   <link rel="shortcut icon" href="./favicon.ico" />
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+  <meta 
+     name='viewport' 
+     content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' 
+/>
   <meta name="theme-color" content="#000000" />
   <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -20,12 +23,11 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-  <title>React-o-Auth</title>
-  <script async src='https://www.google-analytics.com/analytics.js'></script>
+  <title>React Teste Inco</title>
 
 </head>
 
-<body>
+<body style="overflow-x: hidden;">
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
   <!--
