--- a/frontend/common/index.html
+++ b/frontend/common/index.html
@@ -23,8 +23,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-  <title>React-o-Auth</title>
-  <script async src='https://www.google-analytics.com/analytics.js'></script>
+  <title>React Teste Inco</title>
 
 </head>
 
